Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86977

Qml Text underline changes on resize with fractional display scale factors

XMLWordPrintable

    • Windows
    • d0cb311e0 (dev), 3acc52f3d (dev)

      Resizing a window containing Text causes some of the underlines to either disappear or change thickness. At times the underlines are inconsistent to begin with in terms of visibility / thickness.

      This seems to occur only with fractional display scale factors such as 125% or 150% etc.

      Steps to reproduce the issue:

      1. Run the attached example
      2. Resize the window

        1. qtbug86977.zip
          5 kB
          Miika Pernu
        2. underlines.PNG
          80 kB
          Miika Pernu
        3. qtdiag0.log
          6 kB
          Miika Pernu
        4. screenshot-1.png
          116 kB
          Eskil Abrahamsen Blomfeldt
        5. screenshot-2.png
          131 kB
          Eskil Abrahamsen Blomfeldt
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            miikapernu Miika Pernu
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes