src/quick/items/qsginternaltextnode.cpp
@@ -23,6 +23,10 @@
 #include <private/qtextdocumentlayout_p.h>
 #include <qhash.h>
 
+#include <private/qsgcurvefillnode_p.h>
+#include <private/qsgcurvestrokenode_p.h>
+#include <private/qsgcurveprocessor_p.h>
+
 QT_BEGIN_NAMESPACE
 
 Q_DECLARE_LOGGING_CATEGORY(lcVP)
@@ -121,6 +125,29 @@ void QSGInternalTextNode::clearCursor()
         removeChildNode(m_cursorNode);
     delete m_cursorNode;
     m_cursorNode = nullptr;
+}
+
+void QSGInternalTextNode::addDecorationNode(const QRectF &rect, const QColor &color)
+{
+    QSGCurveStrokeNode *node = new QSGCurveStrokeNode;
+    node->setColor(color);
+    node->setStrokeWidth(rect.height());
+
+    QQuadPath path;
+    QPointF c = rect.center();
+    path.moveTo(QVector2D(rect.left(), c.y()));
+    path.lineTo(QVector2D(rect.right(), c.y()));
+
+    QSGCurveProcessor::processStroke(path, 2, rect.height(), Qt::MiterJoin, Qt::FlatCap,
+                                     [&node](const std::array<QVector2D, 3> &s,
+                                             const std::array<QVector2D, 3> &p,
+                                             const std::array<QVector2D, 3> &n,
+                                             bool isLine) {
+                                         Q_ASSERT(isLine);
+                                         node->appendTriangle(s, std::array<QVector2D, 2>{p.at(0), p.at(2)}, n);
+                                     });
+    node->cookGeometry();
+    appendChildNode(node);
 }
 
 void QSGInternalTextNode::addRectangleNode(const QRectF &rect, const QColor &color)
